--- a/front-end/sass/index.html
+++ b/front-end/sass/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/index.css" media="all">
   </head>
   <body>
-    <h1>Hello, Nam</h1>
+    <h1>This is an h1</h1>
+    <a href="#">This is an anchor tag</a>
+    <p class="error">This is an error</p>
+    <p class="notification">This is a notification</p>
+    <button>This is a button</button>
   </body>
 </html>
